--- a/naresh-kumar-resume-template/styles.css
+++ b/naresh-kumar-resume-template/styles.css
@@ -409,22 +409,22 @@ input{
     margin: 0;
 } */
 
-#experience{
+#experience, #experience2{
     width: 100%;
     padding: 0 20px;
     margin-bottom: 10px;
 }
-#employementInfo{
+#employementInfo, #MiniemployementInfo{
     display: flex;
     flex-direction: column;
     font-size: 14px;
 }
-#topInfo{
+#topInfo, #MinitopInfo{
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
-#bottomInfo{
+#bottomInfo,#MinibottomInfo{
     display: flex;
     width: 100%;
     padding-left: 10px;
@@ -453,4 +453,7 @@ input{
     border-radius: 3px;
     font-size: 14px;
     font-weight: bold;
+}
+#JobdescriptionInput{
+    width: 100%;
 }
