--- a/rahul-sharma-invoice-generator/styles.css
+++ b/rahul-sharma-invoice-generator/styles.css
@@ -15,16 +15,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 
 }
 
 .main {
+    border: 1px solid;
     display: flex;
     justify-content: center;
-
     flex-wrap: wrap;
     width: 80%;
-    background-color: antiquewhite;
+    background-color: none;
+    border-radius: 2rem;
+    overflow: auto;
 }
 
 .left {
@@ -67,11 +70,44 @@ span.normal {
     font-weight: 400;
 }
 
+input {
+    width: 90%;
+    height: 30px;
+    outline: none;
+    border: none;
+    background-color: #E8F0FE;
+    margin: 3px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+input::placeholder {
+    padding: 5px;
+
+}
+
+input:focus {
+    border: 1px solid blue;
+    box-shadow: 0 0 10px #0B5ED7;
+}
+
+#total {
+    color: red;
+}
 
 #textarea {
     width: 100%;
     height: 7dvh;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: .9em;
+    color: black;
+    font-weight: 600;
+    margin-top: 20px;
+
 }
+
+
 
 h1 {
     font-family: 'poppins';
@@ -83,14 +119,97 @@ h1 {
     justify-content: space-between;
 }
 
+.top1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px 0;
+    gap: 10px;
+}
+
+.top1>div {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+tr {
+    padding: 10px;
+}
+
+.items {
+    display: flex;
+    justify-content: space-around;
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+tr>th {
+    margin-left: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.items>td {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .date {
     font-family: 'poppins';
     display: inline-block;
 
 }
 
+button {
+    font-size: 1em;
+    background: none;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+    background-color: #0B5ED7;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 15px;
+    text-align: center;
+}
+
+.delete-btn {
+    margin: 5px auto;
+    font-size: 1.2em;
+    cursor: pointer;
+    color: red;
+
+}
+
+select {
+    width: 90%;
+    font-size: .8em;
+    font-weight: 600;
+}
+
+button:hover {
+    box-shadow: 0 0 10px black;
+}
+
+.percent {
+    border: 1px solid white;
+    margin: 0;
+    width: 28px;
+    display: inline-block;
+    text-align: center;
+    font-weight: 800;
+    font-size: .9em;
+    color: green;
+    background-color: #E8F0FE;
+}
+
 .invoice-number {
     display: inline-block;
+    width: 30%;
 }
 
 
@@ -103,9 +222,12 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 71%;
-    height: 70dvh;
-    background-color: aquamarine;
+    width: 75%;
+    background-color: white;
+    border: 2px solid grey;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 0 15px black;
 }
 
 #top {
@@ -125,6 +247,18 @@ h1 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin: 15px auto;
+}
+
+.pop-h {
+    font-weight: 600;
+    font-size: 1.1rem;
+}
+
+.pop-item-head {
+    display: flex;
+    justify-content: space-between;
+
 }
 
 table {
@@ -145,14 +279,37 @@ tr {
     align-items: flex-end;
 }
 
+.popBottom {
+    text-align: center;
+    margin: 30px;
+
+}
+
+.popBottom>button {
+    padding: 10px;
+}
+
+#amount {
+    font-weight: 900;
+    color: red
+}
+
+#pop-container>#top {
+    padding: 15px;
+}
+
+#send-invoice-msg {
+    display: flex;
+    justify-content: center;
+    color: green;
+    font-size: 1rem;
+}
 
 
 /*mediaQuery*/
 
 @media screen and (max-width:780px) {
-    body {
-        background-color: blue;
-    }
+
 
     .main {
         display: flex;
@@ -162,6 +319,5 @@ tr {
     .left,
     .right {
         width: 100%;
-        height: 25vh;
     }
 }
